<resources>
    <string name="app_name">Kera</string>
    <string name="the_quick_brown_fox_jumps_over_a_lazy_dog_djs_flock_by_when_mtv_ax_quiz_prog_junk_mtv_quiz_graced_by_fox_whelps_bawds_jog_flick_quartz_vex_nymphs_waltz_bad_nymph_for_quick_jigs_vex_fox_nymphs_grab">Kera is a service for Preschools, and a local Preschools guide, in which you can find what nearby nurseries in your area</string>
    <string name="sign_in">Login</string>
    <string name="skip">Skip</string>
    <string name="go">Go</string>
    <string name="phone_number">Phone number</string>
    <string name="map">Map</string>
    <string name="list">List</string>
    <string name="nearby">Nearby</string>
    <string name="the_quick_brown_fox_jumps_over_a_lazy_dog_djs_flock_by_when_mtv_ax_quiz_prog_junk_mtv_quiz_graced_by_fox_whelps_bawds_jog_flick_quartz_vex_nymphs_waltz_bad_nymph_for_quick_jigs_vex">The quick, brown fox jumps over a lazy dog. DJs flock by when MTV ax quiz prog. Junk MTV quiz graced by fox whelps. Bawds jog, flick quartz, vex nymphs. Waltz, bad nymph, for quick jigs vex.</string>
    <string name="about_kera">About Kera</string>
    <string name="terms_amp_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="log_out">Log out</string>
    <string name="preschool_name">Preschool Name</string>
    <string name="subscribe">Subscribe</string>

    <string-array name="languages_arrays">
        <item>English</item>
        <item>Arabic</item>

    </string-array>
    <string name="title_activity_pin_code">PinCodeActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="pin_code_sent_via_whatsapp_to">PIN Code sent via WhatsApp to</string>
    <string name="pin_code">PIN Code</string>
    <string name="resend">Resend</string>
    <string name="registration">Registration</string>
    <string name="sex">Sex</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="notification">Notification</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="full_name">Full name</string>
    <string name="job_title">Job title</string>
    <string name="write_your_address_here">Write your address here...</string>
    <string name="add_your_location">Add your Location</string>
    <string name="medical_history_and_requirements">Medical history and requirements</string>
    <string name="kid_s_especial_medical_requirement_to_be_written_here">Kid’s especial medical requirement to
        be written here…</string>
    <string name="submit">Submit</string>
    <string name="i_agree_the_mentioned_payment_policy_and_remarks">I agree the mentioned payment policy, and remarks.</string>
    <string name="upcoming_events">Upcoming Events</string>
    <string name="previous_events">Previous Events</string>
    <string name="price">Price</string>
    <string name="details">Details</string>
    <string name="calendar">Calendar</string>
    <string name="faq_and_information">FAQ and Information</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="education">Education</string>
    <string name="see_more"><u>See more</u></string>
    <string name="comment_about_this_meal">Comment about this meal…</string>
    <string name="medical">Medical Report</string>
    <string name="events">Events</string>
    <string name="daily_reports">Daily Reports</string>
    <string name="meals">Meals</string>
    <string name="nursery">Nursery</string>
    <string name="attendance_history">Attendance History</string>
    <string name="subject">Subject</string>
    <string name="topic_here">Topic here</string>
    <string name="message">Message</string>
    <string name="medicine">Medicine</string>
    <string name="enter_your_comment_here">Enter your comment here</string>
    <string name="title_activity_maps">Map</string>
    <string name="students">Students</string>
    <string name="mark_as_abscent">Mark as abscent</string>

    <string-array name="Countries">
        <item>Java</item>
        <item>Kotlin</item>
        <item>Swift</item>
        <item>Python</item>
        <item>Scala</item>
        <item>Perl</item>
    </string-array>
    <string name="title_activity_write_report">WriteReportActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="daily_report">Daily Report</string>
    <string name="teacher_attendance">Teacher Attendance</string>
    <string name="reply">Reply</string>
    <string name="select_all">Select all</string>
    <string name="contact_us">Contact us</string>
    <string name="send">Send</string>
    <string name="from">From:</string>
    <string name="to">To:</string>
    <string name="this_week">This week</string>
    <string name="the_week">The week</string>
    <string name="latest_news">Latest News</string>
    <string name="teacher_comment">Teacher Comment</string>
    <string name="please_write_your_comment_here">Please write your comment here</string>
    <string name="medical_reports">Medical reports</string>
    <string name="medical_report">Medical Report</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="daily_meals">Daily Meals</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="please_add_location">Please add your location</string>
    <string name="id_copy">ID copy</string>
    <string name="birth_cirt">Birth Cert</string>
    <string name="policy_remarks"><![CDATA[Policy & Remarks]]></string>
    <string name="please_select_at_least_one_student">Please select at least one student</string>
    <string name="Save">Save</string>
    <string name="clear_all">Clear All</string>
    <string name="meadical_report">Medical Reports</string>
    <string name="doctor_comment">Doctor Comment</string>
    <string name="please_accept_policy_term">"Please accept policy terms "</string>
    <string name="please_prvide_the_required_images">Please provide the required images</string>
    <string name="contact_us_with_kera">Contact us with kera</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="Login_need">Log-in!</string>
    <string name="you_need_to">You need to</string>
    <string name="login_n">Login!</string>
    <string name="no_new">No New</string>
    <string name="notification_n">Notifications!</string>
    <string name="log_in">Login</string>
    <string name="no_data">No data yet</string>
    <string name="start">Start</string>
    <string name="end">End</string>
    <string name="Update">Update</string>
    <string name="Newversionavailable">"There is new version available "</string>
    <string name="Pleaseupdateapptonewversiontocontinuereposting">Please update to new version to get the latest features</string>
    <string name="event_images">Event Images</string>
    <string name="location_updated">Location  Updates</string>
    <string name="no_more_images">Sorry there is no more images</string>
    <string name="publish">Publish Daily Report</string>
    <string name="publish_report_message">By pressing Yes this report will be published to all related parents...</string>
    <string name="report_published_successfully">Report Published Successfully</string>
    <string name="error_pulishinng">Error Publishing Report</string>
    <string name="published">Published</string>
    <string name="draft">Draft</string>
    <string name="creat_report">Create new Report ?</string>
    <string name="create_new_report_q">By pressing yes you will create a new one to the selected students...</string>
    <string name="log_out_q">Are you sure ?</string>
    <string name="cancel">Cancel</string>
    <string name="changelanguage">Change Language</string>
    <string name="english">English</string>
    <string name="arabic">Arabic</string>
    <string name="ok">Ok</string>
    <string name="parent_comments">Parent Comments</string>
    <string name="app_notification_channel_id" translatable="false">KeraChannel</string>
    <string name="message_the">Message the </string>
    <string name="principals">Principals</string>
    <string name="no_students">No students are selected</string>
    <string name="latest_report">Latest Reports</string>
    <string name="days">Days</string>
    <string name="Contact">Contact</string>
    <string name="child_first_name">Child first Name</string>
    <string name="Nationality">Nationality</string>
    <string name="father_data">Father\'s data</string>
    <string name="mother_data">Mother\'s Data</string>
    <string name="relative_data">Relative\'s Data</string>
    <string name="relative_details">Trusted person, able to pick-up the Child, and to deal with.</string>
    <string name="Relationship">Relationship</string>
    <string name="home_address">Home Address</string>
    <string name="please_insert_login">Please insert your registered phone number at the preschool!</string>
    <string name="guest">Guest</string>
    <string name="no_address">No address found</string>
    <string name="check_in">Check-In</string>
    <string name="check_out">Check-Out</string>
    <string name="enable_location">Enable Location</string>
    <string name="to_get_location_services">You should enable location permission top get all the nursery schools around you</string>

</resources>