<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigationFragment"
        android:enabled="true"
        android:icon="@drawable/ic_nearby"
        android:title="@string/nearby" />

    <item
        android:id="@+id/notificationFragment"
        android:enabled="true"
        android:icon="@drawable/ic_notifications"
        android:title="@string/notification" />
    <item
        android:id="@+id/textinput_placeholder"
        android:title="" />
    <item
        android:id="@+id/profileFragment"
        android:enabled="true"
        android:icon="@drawable/ic_person"
        android:title="@string/profile" />
    <item
        android:id="@+id/sideMenuFragment"
        android:enabled="true"
        android:icon="@drawable/ic_menu"
        android:title="@string/settings" />
</menu>