<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.app.kera.visitor.NeedToLoginViewModel" />


    </data>
<FrameLayout

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".visitor.NeedToLogin"
    android:background="@drawable/background_alll">

   <RelativeLayout
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:layout_marginBottom="60dp">
       <FrameLayout
           android:id="@+id/img_frame"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_centerHorizontal="true"
           android:layout_centerVertical="true">
           <ImageView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:src="@drawable/ic_need_login"/>
           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_gravity="center"
               android:text="@string/Login_need"
               android:textSize="22dp"
               android:textColor="#5881A4"
               android:layout_marginBottom="10dp"
               android:fontFamily="@font/sf_ui_display_black"/>
       </FrameLayout>

       <LinearLayout
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_centerHorizontal="true"
           android:layout_below="@+id/img_frame">
           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_gravity="center"
               android:text="@string/you_need_to"
               android:textSize="16dp"
               android:textColor="#5881A4"
               android:layout_marginBottom="10dp"
               android:fontFamily="@font/sf_ui_display_regular"/>
           <TextView
               android:id="@+id/visitorLogin"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_gravity="center"
               android:text="@string/login_n"
               android:layout_marginStart="5dp"
               android:textSize="16dp"
               android:textColor="#5881A4"
               android:layout_marginBottom="10dp"
               android:fontFamily="@font/sf_ui_display_black"/>
       </LinearLayout>
   </RelativeLayout>

</FrameLayout>
</layout>
