<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
tools:context=".registrationForm.screen3.AppScreen3">

<data>

    <variable
        name="viewModel"
        type="com.app.kera.registrationForm.screen3.AppScreen3ViewModel" />
</data>

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">



    <de.hdodenhof.circleimageview.CircleImageView

        android:id="@+id/imageView18"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:layout_marginTop="6dp"

        app:layout_constraintEnd_toStartOf="@+id/guideline20"
        app:layout_constraintStart_toStartOf="@+id/guideline19"
        app:layout_constraintTop_toTopOf="@+id/guideline21"

        android:src="@drawable/ic_person"
        android:background="@drawable/image_circle_backgroud"
        android:padding="2dp"

        />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="20dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline21"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="20dp" />

    <ImageView
        android:id="@+id/back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="13dp"
        android:src="@drawable/ic_rounded_back"
        app:layout_constraintStart_toStartOf="@+id/guideline19"
        app:layout_constraintTop_toTopOf="@+id/guideline21"/>

    <TextView
        android:id="@+id/textView26"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/registration"
        android:textColor="#0093DE"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/guideline20"
        app:layout_constraintStart_toStartOf="@+id/guideline19"
        app:layout_constraintTop_toBottomOf="@+id/imageView18" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout13"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:background="@drawable/rounded_white"
        android:elevation="1dp"
        android:layout_marginTop="@dimen/_17sdp"
        app:layout_constraintBottom_toTopOf="@+id/textView_next"
        app:layout_constraintEnd_toStartOf="@+id/guideline20"
        app:layout_constraintStart_toStartOf="@+id/guideline19"
        app:layout_constraintTop_toBottomOf="@+id/textView26">

        <ImageView
            android:id="@+id/imageView20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toStartOf="@+id/imageView21"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_line" />

        <ImageView
            android:id="@+id/imageView21"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/imageView20"
            app:layout_constraintEnd_toStartOf="@+id/imageView22"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/imageView20"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_line" />

        <ImageView
            android:id="@+id/imageView22"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/imageView21"
            app:layout_constraintEnd_toStartOf="@+id/imageView23"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/imageView21"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_line" />

        <ImageView
            android:id="@+id/imageView23"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/imageView22"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/imageView22"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_line_grey" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout12"
            android:layout_width="0dp"
            android:layout_height="170dp"
            android:layout_marginTop="60dp"
            android:background="@drawable/rounded_blue_e9eff7"
            app:layout_constraintEnd_toEndOf="@+id/imageView23"
            app:layout_constraintStart_toStartOf="@+id/imageView20"
            app:layout_constraintTop_toBottomOf="@+id/imageView21">

            <ImageView
                android:id="@+id/imageView37"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="8dp"
                android:src="@drawable/ic_icon_home_blue"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView49"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:fontFamily="@font/sf_ui_display_regular"
                android:text="@string/home_address"
                android:textColor="#5881A4"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="@+id/imageView37"
                app:layout_constraintStart_toEndOf="@+id/imageView37"
                app:layout_constraintTop_toTopOf="@+id/imageView37"
                app:layout_constraintVertical_bias="1.0" />

            <EditText
                android:id="@+id/textView50"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/rounded_white_dark_blue_stroke"
                android:fontFamily="@font/sf_ui_display_regular"
                android:hint="@string/write_your_address_here"

                android:lines="8"
                android:minLines="6"
                android:gravity="top|left"
                android:maxLines="10"
                android:padding="8dp"
                android:textColor="#152D4A"
                android:textColorHint="#152D4A"
                android:textSize="14sp"
                android:scrollbars="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView49" />

            <ImageView
                android:id="@+id/imageView38"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@+id/textView50"
                app:layout_constraintTop_toBottomOf="@+id/textView50" />

            <TextView
                android:id="@+id/textView51"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:fontFamily="@font/sf_ui_display_regular"
                android:text="@string/add_your_location"
                android:textColor="#0093DE"
                android:textSize="12sp"
                android:textStyle="bold"
                android:drawableStart="@drawable/ic_location_red"
                android:drawablePadding="10dp"
                app:layout_constraintBottom_toBottomOf="@+id/imageView38"
                app:layout_constraintStart_toEndOf="@+id/imageView38"
                app:layout_constraintTop_toTopOf="@+id/imageView38" />

            <TextView
                android:id="@+id/textView52"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="24dp"
                android:textColor="#50C4FF"
                android:textSize="9sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/textView50"
                app:layout_constraintTop_toBottomOf="@+id/textView50"
                tools:text="@string/please_add_location" />

        </androidx.constraintlayout.widget.ConstraintLayout>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="160dp"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="50dp"
            android:background="@drawable/rounded_blue_e9eff7"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/constraintLayout12"
            app:layout_constraintStart_toStartOf="@+id/constraintLayout12"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout12">


            <ImageView
                android:id="@+id/imageView39"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:src="@drawable/ic_medical_app_form"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView53"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:fontFamily="@font/sf_ui_display_regular"
                android:text="@string/medical_history_and_requirements"
                android:textColor="#5881A4"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="@+id/imageView39"
                app:layout_constraintStart_toEndOf="@+id/imageView39" />

            <EditText
                android:id="@+id/textView54"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/rounded_white_dark_blue_stroke"
                android:fontFamily="@font/sf_ui_display_regular"
                android:hint="@string/kid_s_especial_medical_requirement_to_be_written_here"
                android:lines="8"
            android:minLines="6"
            android:gravity="top|left"
            android:maxLines="10"
                android:padding="8dp"
                android:textColor="#152D4A"
                android:textColorHint="#152D4A"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView53"
                android:textSize="14sp"
            android:scrollbars="vertical"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/textView_next"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_marginBottom="40dp"
        android:background="@drawable/rounded_blue"
        android:gravity="center"
        android:text="@string/next"
        android:elevation="15dp"
        android:textColor="@android:color/white"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline20" />

</androidx.constraintlayout.widget.ConstraintLayout>
</layout>