<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".pincode.PinCodeActivity">

    <data>

        <variable
            name="viewModel"
            type="com.app.kera.pincode.PinCodeViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background">
        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/_20sdp"
            app:layout_constraintTop_toBottomOf="@+id/imageView2"
            android:layout_marginBottom="@dimen/_50sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:background="@drawable/shadow_blue"/>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="100dp"
        android:background="@drawable/rounded_top_left_right_corners"
        android:elevation="@dimen/_20sdp"

        android:outlineAmbientShadowColor="@color/blue"
        android:outlineSpotShadowColor="@color/blue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        app:layout_constraintVertical_bias="1.0">




            <com.chaos.view.PinView
                android:id="@+id/firstPinView"
                style="@style/PinWidget.PinView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:cursorVisible="false"
                android:hint="◍◍◍◍"
                android:inputType="number"
                android:padding="10dp"
                android:layout_marginTop="10dp"
                android:text="@={viewModel.verifyPhoneRequestModel.code}"
                android:textColor="@color/text_blue"
                android:textSize="@dimen/_28ssp"
                android:textStyle="bold"
                app:cursorColor="#152D4A"
                app:cursorWidth="2dp"
                app:hideLineWhenFilled="false"
                app:itemCount="4"
                android:textColorHint="@color/hint_blue"

                app:itemHeight="60dp"
                app:itemSpacing="21dp"

                app:itemWidth="60dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView_resend"
                app:layout_constraintVertical_bias="0.0"
                app:lineColor="@color/text_blue"
                app:lineWidth="5dp"
                app:viewType="line" />

            <TextView
                android:id="@+id/textView22"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="37dp"
                android:text="@string/pin_code"
                android:textColor="@color/blue"
                android:textStyle="bold"
                android:fontFamily="@font/sf_ui_diplay_bold"
                android:textSize="@dimen/_19ssp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView23"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/pin_code_sent_via_whatsapp_to"
                android:fontFamily="@font/sf_ui_display_medium"
                android:textSize="@dimen/_11ssp"
                android:textColor="@color/blue"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView22" />

            <TextView
                android:id="@+id/textView_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/sf_ui_display_semibold"
                android:textSize="@dimen/_11ssp"
                android:textColor="@color/blue"
                app:layout_constraintEnd_toEndOf="@+id/textView23"
                app:layout_constraintStart_toStartOf="@+id/textView23"
                app:layout_constraintTop_toBottomOf="@+id/textView23"
                tools:text="+20 100 9030 867" />

            <TextView
                android:id="@+id/textView_resend"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/resend"
                android:fontFamily="@font/sf_ui_display_regular"
                android:textColor="@color/dark_blue"
                android:textSize="@dimen/_11ssp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView_phone" />
        </androidx.constraintlayout.widget.ConstraintLayout>


        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="@dimen/_124sdp"
            android:layout_height="@dimen/_128sdp"
            android:layout_marginTop="@dimen/_70sdp"
            android:src="@drawable/kera"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"

            />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>